objects/BMCServiceDesk__SLA_Milestone_Problem_Txn_History__c.object
<CustomObject>
    <description>Stores the problem milestones that are achieved or canceled for a service transaction.</description>
    <fields>
        <fullName>BMCServiceDesk__Action_Performed__c</fullName>
        <description>Milestone action that was performed.</description>
        <label>Action_Performed</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Error__c</fullName>
        <label>Error</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKProblem_Service_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Problem Service Target</description>
        <label>Problem Service Target</label>
        <referenceTo>BMCServiceDesk__Problem_Service_Target__c</referenceTo>
        <relationshipLabel>SLA Milestone Problem History</relationshipLabel>
        <relationshipName>SLA_Milestone_Problem_Txn_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKProblem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to problem</description>
        <label>Problem</label>
        <referenceTo>BMCServiceDesk__Problem__c</referenceTo>
        <relationshipLabel>SLA Milestone Problem History</relationshipLabel>
        <relationshipName>SLA_Milestone_Problem_Txn_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SLA_Milestone_Condition__c</fullName>
        <description>Milestone conditions</description>
        <label>SLA Milestone Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Percentage of Time Elapsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage of Time Remaining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Target is Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Target is Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Target is Missed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Target Warning Occurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Elapsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Remaining</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SLA_Milestone_Value__c</fullName>
        <description>Milestone value</description>
        <label>SLA Milestone Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <description>Status of the milestone transaction</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SLA Milestone Problem History</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>SLA Milestone Problem History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Milestone Problem History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>